@@ -30,6 +30,9 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 * Nicolas Gramlich (http://andengine.org):
 	Contributed the remote Javascript console
 
+* Robert J Payne (http://www.zwopple.com/)
+	Initial PVR v3 file format support
+
 * Scott Lembcke (AKA slembcke) (http://chipmunk-physics.net/)
 	Many improvements in the OpenGL ES 2.0 code: better error reporting, better blending function, better shader code
 	Author of CCDrawNode: a node that batches drawing primitives
