@@ -19,19 +19,33 @@ enum {
 static int sceneIdx=-1;
 static NSString *transitions[] = {
 
-	@"TexturePVR2BPPv3",
-	@"TexturePVRII2BPPv3",
-	@"TexturePVR4BPPv3",
-	@"TexturePVR4IIBPPv3",
-	@"TexturePVRRGBA8888v3",
+//	@"TexturePVR2BPP",
+//	@"TexturePVR2BPPv3",
+//	@"TexturePVRII2BPPv3",
+//	@"TexturePVR4BPP",
+//	@"TexturePVR4BPPv3",
+//	@"TexturePVRII4BPPv3",
+	@"TexturePVRRGBA8888",
+	@"TexturePVRRGBA8888v3",	
+	@"TexturePVRBGRA8888",
 	@"TexturePVRBGRA8888v3",
+	@"TexturePVRRGBA4444",
 	@"TexturePVRRGBA4444v3",
+	@"TexturePVRRGBA4444GZ",
+	@"TexturePVRRGBA4444CCZ",
+	@"TexturePVRRGBA5551",
 	@"TexturePVRRGBA5551v3",
+	@"TexturePVRRGB565",
 	@"TexturePVRRGB565v3",
+	@"TexturePVRRGB888",
 	@"TexturePVRRGB888v3",
+	@"TexturePVRA8",
 	@"TexturePVRA8v3",
+	@"TexturePVRI8",
 	@"TexturePVRI8v3",
+	@"TexturePVRAI88",
 	@"TexturePVRAI88v3",
+	
 
 	@"TextureMemoryAlloc",
 
@@ -43,19 +57,35 @@ static NSString *transitions[] = {
 	@"TexturePVRNPOT4444",
 	@"TexturePVRNPOT8888",
 	@"TexturePVR",
+	
 	@"TexturePVR2BPP",
+	@"TexturePVR2BPPv3",
+	@"TexturePVRII2BPPv3",
 	@"TexturePVR4BPP",
+	@"TexturePVR4BPPv3",
+	@"TexturePVRII4BPPv3",
 	@"TexturePVRRGBA8888",
+	@"TexturePVRRGBA8888v3",	
 	@"TexturePVRBGRA8888",
+	@"TexturePVRBGRA8888v3",
 	@"TexturePVRRGBA4444",
+	@"TexturePVRRGBA4444v3",
 	@"TexturePVRRGBA4444GZ",
 	@"TexturePVRRGBA4444CCZ",
 	@"TexturePVRRGBA5551",
+	@"TexturePVRRGBA5551v3",
 	@"TexturePVRRGB565",
+	@"TexturePVRRGB565v3",
 	@"TexturePVRRGB888",
+	@"TexturePVRRGB888v3",
 	@"TexturePVRA8",
+	@"TexturePVRA8v3",
 	@"TexturePVRI8",
+	@"TexturePVRI8v3",
 	@"TexturePVRAI88",
+	@"TexturePVRAI88v3",
+
+	
 	@"TexturePVRBadEncoding",
 	@"TexturePNG",
 	@"TextureBMP",
